--- a/build-QtTcpClientProducer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/Makefile.Release
+++ b/build-QtTcpClientProducer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/Makefile.Release
@@ -254,7 +254,7 @@ release/moc_mainwindow.cpp: ../QtTcpClientProducer/mainwindow.h \
 		C:/Qt/6.3.2/mingw_64/include/QtCore/QTimerEvent \
 		release/moc_predefs.h \
 		C:/Qt/6.3.2/mingw_64/bin/moc.exe
-	C:\Qt\6.3.2\mingw_64\bin\moc.exe $(DEFINES) --include "C:/Users/Julia/OneDrive/Documentos/UFRN/Semestres/7. Setimo Periodo (2023.1)/QtSupervisory-main/QtSupervisory-main/build-QtTcpClientProducer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.3.2/mingw_64/mkspecs/win32-g++ -I"C:/Users/Julia/OneDrive/Documentos/UFRN/Semestres/7. Setimo Periodo (2023.1)/QtSupervisory-main/QtSupervisory-main/QtTcpClientProducer" -IC:/Qt/6.3.2/mingw_64/include -IC:/Qt/6.3.2/mingw_64/include/QtWidgets -IC:/Qt/6.3.2/mingw_64/include/QtGui -IC:/Qt/6.3.2/mingw_64/include/QtNetwork -IC:/Qt/6.3.2/mingw_64/include/QtCore -I. -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++ -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++/backward -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include-fixed -IC:/Qt/Tools/mingw1120_64/x86_64-w64-mingw32/include ..\QtTcpClientProducer\mainwindow.h -o release\moc_mainwindow.cpp
+	C:\Qt\6.3.2\mingw_64\bin\moc.exe $(DEFINES) --include "C:/Users/Julia/OneDrive/Documentos/UFRN/Semestres/7. Setimo Periodo (2023.1)/PA/Projeto 15.07/Projeto 15.07/QtSupervisory-main/build-QtTcpClientProducer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/release/moc_predefs.h" -IC:/Qt/6.3.2/mingw_64/mkspecs/win32-g++ -I"C:/Users/Julia/OneDrive/Documentos/UFRN/Semestres/7. Setimo Periodo (2023.1)/PA/Projeto 15.07/Projeto 15.07/QtSupervisory-main/QtTcpClientProducer" -IC:/Qt/6.3.2/mingw_64/include -IC:/Qt/6.3.2/mingw_64/include/QtWidgets -IC:/Qt/6.3.2/mingw_64/include/QtGui -IC:/Qt/6.3.2/mingw_64/include/QtNetwork -IC:/Qt/6.3.2/mingw_64/include/QtCore -I. -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++ -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++/x86_64-w64-mingw32 -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include/c++/backward -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include -IC:/Qt/Tools/mingw1120_64/lib/gcc/x86_64-w64-mingw32/11.2.0/include-fixed -IC:/Qt/Tools/mingw1120_64/x86_64-w64-mingw32/include ..\QtTcpClientProducer\mainwindow.h -o release\moc_mainwindow.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
@@ -591,67 +591,10 @@ release/mainwindow.o: ../QtTcpClientProducer/mainwindow.cpp ../QtTcpClientProduc
 		C:/Qt/6.3.2/mingw_64/include/QtCore/QDebug \
 		C:/Qt/6.3.2/mingw_64/include/QtCore/QTimerEvent \
 		ui_mainwindow.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/QVariant \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QApplication \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qapplication.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qcoreapplication.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qeventloop.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qcoreapplication_platform.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qfuture.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qfutureinterface.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qmutex.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qresultstore.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qfuture_impl.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qthreadpool.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qthread.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qdeadlinetimer.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qelapsedtimer.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qrunnable.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qexception.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qpromise.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qguiapplication.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qinputmethod.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qlocale.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qguiapplication_platform.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QGridLayout \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qgridlayout.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qlayout.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qlayoutitem.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qboxlayout.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QLCDNumber \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qlcdnumber.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qframe.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QLabel \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qlabel.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qpicture.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qtextdocument.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QLineEdit \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qlineedit.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qtextcursor.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qtextformat.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qpen.h \
-		C:/Qt/6.3.2/mingw_64/include/QtGui/qtextoption.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QMenuBar \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qmenubar.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qmenu.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QPushButton \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qpushbutton.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qabstractbutton.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QSlider \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qslider.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qabstractslider.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QStatusBar \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qstatusbar.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QTextBrowser \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qtextbrowser.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qtextedit.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qabstractscrollarea.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QToolBar \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/qtoolbar.h \
-		C:/Qt/6.3.2/mingw_64/include/QtWidgets/QWidget \
 		C:/Qt/6.3.2/mingw_64/include/QtCore/QDateTime \
 		C:/Qt/6.3.2/mingw_64/include/QtCore/qdatetime.h \
-		C:/Qt/6.3.2/mingw_64/include/QtCore/qcalendar.h
+		C:/Qt/6.3.2/mingw_64/include/QtCore/qcalendar.h \
+		C:/Qt/6.3.2/mingw_64/include/QtCore/qlocale.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\mainwindow.o ..\QtTcpClientProducer\mainwindow.cpp
 
 release/moc_mainwindow.o: release/moc_mainwindow.cpp 
